--- a/package.json
+++ b/package.json
@@ -21,54 +21,46 @@
     "pnpm": ">=10.18.2"
   },
   "scripts": {
-    "build": "cross-env NX_NO_CLOUD=true nx run-many -t build --exclude=workspace-format && pnpm run postbuild:clean",
-    "build:affected": "cross-env NX_NO_CLOUD=true nx affected -t build --exclude=workspace-format && pnpm run postbuild:clean",
-    "postbuild:clean": "pnpm run clean:apple",
-    "test": "nx run-many -t test",
-    "test:shared-utils": "nx test shared-utils",
-    "test:affected": "nx affected -t test",
-    "lint:packages": "nx run-many -t lint -p design-tokens,design-system,shared-utils",
+    "build": "pnpm -r --workspace-root=false --workspace-concurrency=1 --if-present build",
+    "postbuild:clean": "echo 'Post-build cleanup skipped'",
+    "test": "pnpm -r --workspace-root=false --workspace-concurrency=1 --if-present test",
+    "test:shared-utils": "pnpm --filter shared-utils test",
+    "test:affected": "pnpm -r --workspace-root=false --workspace-concurrency=1 --if-present test",
+    "lint:packages": "pnpm --filter design-tokens --filter design-system --filter shared-utils lint",
     "lint:base": "pnpm exec biome lint .",
     "lint:typed": "pnpm exec eslint --no-error-on-unmatched-pattern --max-warnings=0 --ext .js,.jsx,.ts,.tsx,.mjs,.cjs,.cts,.mts \"apps/docs/**/*.{js,jsx,ts,tsx,mjs,cjs,cts,mts}\" \"apps/workflows/**/*.{js,jsx,ts,tsx,mjs,cjs,cts,mts}\" \"apps/examples/**/*.{js,jsx,ts,tsx,mjs,cjs,cts,mts}\" \"packages/token-*/**/*.{js,jsx,ts,tsx,mjs,cjs,cts,mts}\" \"packages/tokens-*/**/*.{js,jsx,ts,tsx,mjs,cjs,cts,mts}\" \"packages/ui-*/**/*.{js,jsx,ts,tsx,mjs,cjs,cts,mts}\" \"packages/platform-bridges/**/*.{js,jsx,ts,tsx,mjs,cjs,cts,mts}\" \"tools/**/*.{js,jsx,ts,tsx,mjs,cjs,cts,mts}\"",
     "lint:workspace": "pnpm run lint:base && pnpm run lint:typed",
-    "lint:affected": "nx affected -t lint",
+    "lint:affected": "pnpm -r --workspace-root=false --workspace-concurrency=1 --if-present lint",
     "lint:css": "stylelint 'packages/**/*.{css,scss,sass}' --fix",
     "lint:md": "markdownlint-cli2 --config config.markdownlint-cli2.jsonc --fix \"docs/**/*.md\" \"packages/*/README.md\"",
     "lint:md:fix": "node scripts/fix-markdown-line-length.js && pnpm lint:md",
     "lint:md:fix-line-length": "node scripts/fix-markdown-line-length.js",
     "lint:commits": "commitlint --from=HEAD~1 --to=HEAD",
-    "e2e": "nx run-many -t e2e",
-    "dev": "nx run-many -t serve --parallel=10",
-    "clean": "nx reset && rm -rf node_modules && pnpm install",
-    "clean:apple": "node tools/apple-cleaner.js",
-    "clean:apple:staged": "node tools/apple-cleaner.js --mode=staged",
-    "clean:apple:watch": "node tools/apple-cleaner-watch.js",
-    "check:apple": "node tools/apple-cleaner.js --mode=check",
+    "e2e": "pnpm -r --workspace-root=false --workspace-concurrency=1 --if-present e2e",
+    "dev": "pnpm -r --workspace-root=false --workspace-concurrency=10 --if-present serve",
+    "clean": "rm -rf node_modules && pnpm install",
     "clean:ds-store": "find . -name '.DS_Store' -type f -delete && find . -name '._*' -type f -delete",
     "clean:xcode": "find . -name '*.xcuserdata*' -type d -exec rm -rf {} + 2>/dev/null || true; find . -name 'xcuserdata' -type d -exec rm -rf {} + 2>/dev/null || true; find . -name '*.xcworkspace/xcuserdata' -type d -exec rm -rf {} + 2>/dev/null || true",
-    "clean:apple-logs": "find . -name '*.crash' -type f -delete 2>/dev/null || true; find . -name '*.crashlog' -type f -delete 2>/dev/null || true; find . -name '*.diag' -type f -delete 2>/dev/null || true",
     "clean:spotlight": "find . -name '.Spotlight-V100' -type d -exec rm -rf {} + 2>/dev/null || true; find . -name '.fseventsd' -type d -exec rm -rf {} + 2>/dev/null || true",
     "clean:temp": "find . -name '*.tmp' -type f -delete 2>/dev/null || true; find . -name 'Thumbs.db' -type f -delete 2>/dev/null || true; find . -name '~*' -type f -delete 2>/dev/null || true",
-    "clean:all": "pnpm run clean:apple && pnpm run clean:temp && pnpm run clean",
-    "clean:workspace": "nx run-many -t clean",
-    "clean:apple:workspace": "nx run-many -t clean:apple",
-    "precommit:clean": "pnpm run clean:apple:staged",
+    "clean:all": "pnpm run clean:temp && pnpm run clean",
+    "clean:workspace": "pnpm -r --workspace-root=false --workspace-concurrency=1 --if-present clean",
     "autofix": "./scripts/autofix.sh",
     "autofix:safe": "./scripts/autofix.sh",
     "format": "pnpm exec biome check --write --linter-enabled=false .",
     "format:check": "pnpm exec biome check --formatter-enabled=true --linter-enabled=false --assist-enabled=false --error-on-warnings .",
     "typecheck": "pnpm run typecheck:workspace",
     "typecheck:workspace": "pnpm -r --workspace-root=false --workspace-concurrency=1 --if-present typecheck",
-    "typecheck:nx": "nx run-many -t typecheck",
-    "visual-test": "nx run-many -t visual-test",
-    "storybook": "nx run design-system:storybook",
-    "build-storybook": "nx run design-system:build-storybook",
-    "tokens:build": "nx run design-tokens:build",
-    "tokens:build-all": "cross-env NX_NO_CLOUD=true nx run design-tokens:build && cross-env NX_NO_CLOUD=true nx run-many -t build --exclude=workspace-format",
+    "typecheck:nx": "pnpm -r --workspace-root=false --workspace-concurrency=1 --if-present typecheck",
+    "visual-test": "pnpm -r --workspace-root=false --workspace-concurrency=1 --if-present visual-test",
+    "storybook": "pnpm --filter design-system storybook",
+    "build-storybook": "pnpm --filter design-system build-storybook",
+    "tokens:build": "pnpm --filter design-tokens build",
+    "tokens:build-all": "pnpm --filter design-tokens build && pnpm -r --workspace-root=false --workspace-concurrency=1 --if-present build",
     "tokens:orchestrate": "cargo run --manifest-path packages/token-orchestrator/Cargo.toml --bin mimic-token-orchestrator",
-    "tokens:sync": "pnpm run tokens:orchestrate && nx run design-tokens:tokens:sync",
-    "tokens:sync-all": "cross-env NX_NO_CLOUD=true nx run design-tokens:tokens:sync && cross-env NX_NO_CLOUD=true nx run-many -t build --exclude=workspace-format --skip-nx-cache",
-    "tokens:watch": "nx run design-tokens:watch",
+    "tokens:sync": "pnpm run tokens:orchestrate && pnpm --filter design-tokens tokens:sync",
+    "tokens:sync-all": "pnpm --filter design-tokens tokens:sync && pnpm -r --workspace-root=false --workspace-concurrency=1 --if-present build",
+    "tokens:watch": "pnpm --filter design-tokens watch",
     "tokens:validate": "pnpm run tokens:orchestrate -- --validate-only && node -e \"const { runTokenContractValidation } = require('./packages/shared-utils/dist/token-contract-validation.js'); runTokenContractValidation();\"",
     "tokens:check-drift": "echo '🔍 Checking for token drift...' && echo 'Drift check placeholder - would compare with Penpot'",
     "tokens:diff": "echo '📊 Token diff placeholder - would show changes between versions'",
@@ -77,88 +69,73 @@
     "tokens:cli:status": "echo '📋 Use: mimic-tokens status (install globally: npm install -g mimic-token-cli)'",
     "validate:token-contract": "pnpm tokens:validate",
     "validate:penpot-export": "node -e \"console.log('🔍 Validating Penpot export...'); if (!require('fs').existsSync('tokens.json')) { console.log('❌ tokens.json not found'); process.exit(1); } console.log('✅ Penpot export validated');\"",
-    "dev:full-stack": "concurrently 'nx run design-tokens:watch' 'nx run design-system:storybook'",
-    "dev:all": "concurrently -n tokens,storybook,web 'pnpm tokens:watch' 'pnpm storybook' 'nx run web:serve'",
-    "test:e2e": "nx run-many -t e2e",
+    "dev:full-stack": "concurrently 'pnpm --filter design-tokens watch' 'pnpm --filter design-system storybook'",
+    "dev:all": "concurrently -n tokens,storybook,web 'pnpm tokens:watch' 'pnpm storybook' 'pnpm --filter web serve'",
+    "test:e2e": "pnpm -r --workspace-root=false --workspace-concurrency=1 --if-present e2e",
     "test:visual": "chromatic --exit-zero-on-changes",
     "prepare": "husky",
-    "graph": "nx graph",
-    "graph:affected": "nx affected:graph",
-    "affected": "nx affected",
-    "dep-graph": "nx dep-graph",
-    "report": "nx report",
-    "reset": "nx reset",
-    "repair": "nx repair",
-    "connect": "nx connect",
-    "watch": "nx watch --all -- nx build",
+    "graph": "echo 'Graph visualization not available without Nx'",
+    "graph:affected": "echo 'Affected graph not available without Nx'",
+    "affected": "echo 'Affected commands not available without Nx'",
+    "dep-graph": "echo 'Dependency graph not available without Nx'",
+    "report": "echo 'Nx report not available without Nx'",
+    "reset": "echo 'Nx reset not available without Nx'",
+    "repair": "echo 'Nx repair not available without Nx'",
+    "connect": "echo 'Nx connect not available without Nx'",
+    "watch": "echo 'Nx watch not available without Nx'",
     "dev:runner": "node tools/dev-runner.js",
     "setup:dx": "./scripts/setup-dx.sh",
-    "setup:complete": "pnpm install && pnpm clean:apple && pnpm build",
-    "workspace:info": "nx report && nx graph --file=tmp/workspace-graph.json",
-    "analyze": "pnpm build && pnpm workspace:info",
+    "setup:complete": "pnpm install && pnpm build",
+    "workspace:info": "echo 'Workspace info not available without Nx'",
+    "analyze": "pnpm build && echo 'Analysis not available without Nx'",
     "security:gitleaks": "./scripts/run-gitleaks.sh detect --no-banner",
-    "upgrade:plan": "nx migrate latest",
+    "upgrade:plan": "echo 'Nx migrate not available without Nx'",
     "upgrade:latest": "pnpm up --latest --recursive --workspace-root",
-    "upgrade:verify": "pnpm install && cross-env NX_NO_CLOUD=true pnpm nx run-many -t build,test,lint --exclude=workspace-format"
+    "upgrade:verify": "pnpm install && pnpm -r --workspace-root=false --workspace-concurrency=1 --if-present build,test,lint"
   },
   "devDependencies": {
-    "@biomejs/biome": "2.2.5",
+    "@biomejs/biome": "2.3.3",
     "@commitlint/cli": "20.1.0",
     "@commitlint/config-conventional": "20.0.0",
     "@commitlint/config-nx-scopes": "20.0.0",
-    "@eslint/js": "9.37.0",
-    "@nx/cypress": "21.6.4",
-    "@nx/esbuild": "21.6.4",
-    "@nx/eslint": "21.6.4",
-    "@nx/eslint-plugin": "21.6.4",
-    "@nx/jest": "21.6.4",
-    "@nx/js": "21.6.4",
-    "@nx/node": "21.6.4",
-    "@nx/plugin": "21.6.4",
-    "@nx/react": "21.6.4",
-    "@nx/storybook": "21.6.4",
-    "@nx/vite": "21.6.4",
-    "@nx/webpack": "21.6.4",
-    "@nx/workspace": "21.6.4",
-    "@storybook/addon-a11y": "9.1.10",
+    "@eslint/js": "9.39.0",
+    "@storybook/addon-a11y": "10.0.2",
     "@storybook/addon-measure": "9.0.8",
     "@storybook/addon-outline": "9.0.8",
     "@testing-library/jest-dom": "6.9.1",
     "@types/jest": "30.0.0",
-    "@types/node": "24.7.2",
-    "@typescript-eslint/eslint-plugin": "8.46.0",
-    "@typescript-eslint/parser": "8.46.0",
+    "@types/node": "24.10.0",
+    "@typescript-eslint/eslint-plugin": "8.46.2",
+    "@typescript-eslint/parser": "8.46.2",
     "chokidar": "4.0.3",
-    "chromatic": "13.3.0",
+    "chromatic": "13.3.3",
     "concurrently": "9.2.1",
     "cross-env": "10.1.0",
-    "cypress": "15.4.0",
+    "cypress": "15.5.0",
     "dprint": "0.50.2",
-    "eslint": "9.37.0",
+    "eslint": "9.39.0",
     "eslint-config-prettier": "10.1.8",
     "eslint-import-resolver-typescript": "4.4.4",
     "eslint-plugin-import": "2.32.0",
     "eslint-plugin-simple-import-sort": "12.1.1",
     "glob": "11.0.3",
-    "globals": "16.4.0",
+    "globals": "16.5.0",
     "husky": "9.1.7",
     "jiti": "2.6.1",
-    "jsdom": "27.0.0",
-    "lint-staged": "16.2.4",
+    "jsdom": "27.1.0",
+    "lint-staged": "16.2.6",
     "markdownlint-cli2": "0.18.1",
     "npm-run-all2": "8.0.4",
-    "nx": "21.6.4",
-    "nx-cloud": "^19.1.0",
     "prettier": "3.6.2",
-    "prettier-plugin-tailwindcss": "0.6.14",
-    "rimraf": "6.0.1",
+    "prettier-plugin-tailwindcss": "0.7.1",
+    "rimraf": "6.1.0",
     "stylelint": "16.25.0",
     "stylelint-config-standard": "39.0.1",
     "stylelint-config-tailwindcss": "1.0.0",
     "stylelint-order": "7.0.0",
     "typescript": "5.9.3",
-    "typescript-eslint": "8.46.0",
-    "vitest": "3.2.4",
+    "typescript-eslint": "8.46.2",
+    "vitest": "4.0.6",
     "wait-on": "9.0.1"
   },
   "lint-staged": {
@@ -205,6 +182,6 @@
   "dependencies": {
     "@vanilla-extract/css": "1.17.4",
     "@vanilla-extract/vite-plugin": "5.1.1",
-    "storybook": "9.1.10"
+    "storybook": "10.0.2"
   }
 }
