--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -40,14 +40,11 @@ jobs:
       - name: 🔧 Install dependencies
         run: pnpm install --frozen-lockfile
 
-      - name: 🧹 Clean Apple junk
-        run: pnpm clean:apple
-
       - name: 🏗️ Build packages
-        run: pnpm nx run-many -t build
+        run: pnpm run build
 
       - name: 🧪 Run tests
-        run: pnpm nx run-many -t test
+        run: pnpm run test
 
       - name: 🔍 Lint code
         run: pnpm nx run-many -t lint
