--- a/apps/desktop/package.json
+++ b/apps/desktop/package.json
@@ -6,23 +6,24 @@
   "scripts": {
     "dev": "tauri dev",
     "build": "tauri build",
+    "build:frontend": "vite build",
     "typecheck": "tsc --noEmit --project tsconfig.json",
     "tauri": "tauri",
     "test": "vitest",
-    "test:ui": "vitest --ui",
-    "postbuild:clean": "../../scripts/postbuild-chain.sh dist --validate"
+    "test:ui": "vitest --ui"
   },
   "dependencies": {
     "@mimic/design-tokens": "workspace:*",
-    "@mimic/shared-utils": "workspace:*"
+    "@mimic/shared-utils": "workspace:*",
+    "@tauri-apps/plugin-shell": "^2.0.0"
   },
   "devDependencies": {
-    "@tauri-apps/cli": "^2.8.4",
-    "@vitest/ui": "^3.2.4",
-    "jsdom": "^27.0.0",
+    "@tauri-apps/cli": "^2.9.2",
+    "@vitest/ui": "^4.0.6",
+    "jsdom": "^27.1.0",
     "typescript": "^5.9.3",
-    "vite": "^7.1.11",
-    "vitest": "^3.2.4"
+    "vite": "^7.1.12",
+    "vitest": "^4.0.6"
   },
   "engines": {
     "node": ">=22.0.0"
