--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -9,38 +9,37 @@
     "typecheck": "tsc --noEmit --project tsconfig.json",
     "test": "jest",
     "lint": "eslint \"src/**/*.{js,jsx,ts,tsx}\"",
-    "clean": "react-native clean",
-    "postbuild:clean": "../../scripts/postbuild-chain.sh build --validate"
+    "clean": "react-native clean"
   },
   "dependencies": {
     "@mimic/design-tokens": "workspace:*",
     "@mimic/shared-utils": "workspace:*",
     "@react-native-async-storage/async-storage": "^2.2.0",
     "react": "19.2.0",
-    "react-native": "0.82.0"
+    "react-native": "0.82.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.28.4",
-    "@babel/preset-env": "^7.28.3",
+    "@babel/core": "^7.28.5",
+    "@babel/preset-env": "^7.28.5",
     "@babel/runtime": "^7.28.4",
-    "@eslint/js": "^9.37.0",
-    "@react-native/babel-preset": "0.82.0",
-    "@react-native/eslint-config": "0.82.0",
-    "@react-native/metro-config": "0.82.0",
-    "@react-native/typescript-config": "0.82.0",
+    "@eslint/js": "^9.39.0",
+    "@react-native/babel-preset": "0.82.1",
+    "@react-native/eslint-config": "0.82.1",
+    "@react-native/metro-config": "0.82.1",
+    "@react-native/typescript-config": "0.82.1",
     "@testing-library/react-native": "^13.3.3",
     "@types/jest": "^30.0.0",
     "@types/react": "^19.2.2",
     "@types/react-test-renderer": "^19.1.0",
     "babel-jest": "^30.2.0",
-    "eslint": "^9.37.0",
+    "eslint": "^9.39.0",
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-native": "^5.0.0",
     "jest": "^30.2.0",
     "prettier": "^3.6.2",
     "react-test-renderer": "19.2.0",
     "typescript": "^5.9.3",
-    "typescript-eslint": "^8.46.0"
+    "typescript-eslint": "^8.46.2"
   },
   "engines": {
     "node": ">=22.0.0"
